[project]
name = "livekit-voice-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.63.0",
    "livekit-agents[deepgram,google,silero,turn-detector]~=1.3",
    "livekit-plugins-noise-cancellation~=0.2",
    "minio>=7.2.20",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "thefuzz>=0.22.1",
]


